<resources>
    <string name="app_name">Quien quiere ser graduado</string>
    <string name="action_nueva_partida">Nueva partida</string>
    <string name="jugar">Jugar</string>
    <string name="instrucciones">Instrucciones</string>
    <string name="instrucciones_texto">
"¿Quién quiere ser graduado?" es un juego pensado para dispositivos Android cuyo objetivo es muy simple: superar los cuatro cursos respectivos al grado de Informática de Gestión y Sistemas de Información, y conseguir el graduado.\n
\n
En el menú principal de la aplicación, el usuario tendrá la posibilidad de comenzar a jugar directamente, o si lo prefiere, leerse las instrucciones. En caso de elegir la primera opción, aparecerá una pantalla en la cual se deberá introducir el nombre del usuario (el nickname para el jugador de la partida), y un número de teléfono obligatorio, sin el cual no se permitirá continuar. Una vez se han especificado estos dos campos, comienza la partida.\n
\n
Objetivo del juego: Superar los 4 niveles de preguntas (un nivel simula un curso del grado), compuestos por 4 preguntas por cada nivel (preguntas referentes a asignaturas del respectivo nivel o curso), hasta conseguir acertarlas todas y conseguir el graduado de Informática de Gestión y Sistemas de Información.\n
\n
Reglas del juego: Cada pregunta consta de 4 respuestas posibles, de las cuales, solamente 1 de ellas será correcta. Cuando el usuario seleccione la respuesta, ésta se iluminará de color ámbar, y pasados unos segundos, se pondrá en verde si es correcta, y si no, se mostrará en ámbar la respuesta elegida por el usuario, y en verde la correcta.\n
\n
Asimismo, el jugador dispone de 3 comodines de un solo uso, a saber: "50:50", que elimina dos de las 4 respuestas correctas, dejando sólo 2 como posible elección (siendo una de ellas la correcta, claro); "Llamada", que sirviéndose del número de teléfono especificado en el paso previo, llamará a ese mismo número para que el jugador pueda preguntarle su duda; "Compensación", que saltará, automáticamente, a la siguiente pregunta, dando por válida la anterior. Este comodín sólo estará disponible en los primeros 3 niveles.\n
\n
En caso de fallar una pregunta, se perderá la partida y se le preguntará al jugador si quiere volver a matricularse, o si quiere apuntarse a Magisterio, en cuyo caso, se le llevaría a la página web de matriculación de la Facultad de Magisterio del Campus de Leioa.</string>
    <string name="aceptar">Aceptar</string>
    <string name="title_activity_user_info">UserInfoActivity</string>

    <string name="default_user">Tu nombre</string>

    <string name="rellene_info">Rellene la info:</string>
    <string name="nombre_usuario">Nombre de Usuario:</string>
    <string name="selleccione_contacto">Selleccione contacto al que llamará como comodín</string>
    <string name="contactos">Contactos</string>
    <string name="comenzar_juego">Comenzar juego</string>
    <string name="title_activity_juego">JuegoActivity</string>

    <string name="datos_error_titulo">Ooooopps</string>
    <string name="datos_error_mensaje">Por favor introduzca todos los datos correctamente</string>


    <string name="menu_cerrado">Cerrado</string>
    <string name="menu_abierto">Abierto</string>

    <string-array name="preguntas">
        <item>240 créditos</item>
        <item>225 créditos</item>
        <item>210 créditos</item>
        <item>195 créditos</item>
        <item>180 créditos</item>
        <item>165 créditos</item>
        <item>150 créditos</item>
        <item>135 créditos</item>
        <item>120 créditos</item>
        <item>105 créditos</item>
        <item>90 créditos</item>
        <item>75 créditos</item>
        <item>60 créditos</item>
        <item>45 créditos</item>
        <item>30 créditos</item>
        <item>15 créditos</item>
    </string-array>

    <string name="comodin_1">Compensacion</string>
    <string name="comodin_2">Llamada</string>
    <string name="comodin_3">50:50</string>


    <string name="congratulations">Irabazi duzu!</string>
    <string name="congratulations_msg">Zorionak! Informatikako gradua atera duzu! Partida berri bat hasi nahi?</string>
    <string name="no">No</string>

    <string name="perder">Has perdido!</string>
    <string name="perder_msg">Tal vez Magis no sea una mala idea... Quieres matricularte de nuevo?</string>



</resources>
