<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- The main content view -->
    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#9A2EFE">
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent" android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Medium Text"
                android:id="@+id/preguntaText"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_margin="8dp"
                android:layout_above="@+id/respuesta1" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comodin_1"
                android:id="@+id/comodin_compensa"
                android:layout_margin="8dp"
                android:layout_above="@+id/preguntaText"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:onClick="comodinCompensacion" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comodin_2"
                android:layout_margin="8dp"
                android:id="@+id/comodin_llamada"
                android:onClick="comodinLlamada"
                android:layout_above="@+id/preguntaText"
                android:layout_toRightOf="@+id/comodin_compensa" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comodin_3"
                android:id="@+id/comodin_50"
                android:layout_margin="8dp"
                android:layout_above="@+id/preguntaText"
                android:layout_toRightOf="@+id/comodin_llamada"
                android:layout_alignParentRight="true"
                android:onClick="comodin50" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Button"
                android:textColor="#FFFFFF"
                android:id="@+id/respuesta3"
                android:layout_margin="8dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:onClick="respuesta"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Button"
                android:id="@+id/respuesta4"
                android:textColor="#FFFFFF"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:onClick="respuesta"
                android:layout_margin="8dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Button"
                android:id="@+id/respuesta1"
                android:textColor="#FFFFFF"
                android:layout_margin="8dp"
                android:layout_above="@+id/respuesta3"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:onClick="respuesta"  />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Button"
                android:id="@+id/respuesta2"
                android:onClick="respuesta"
                android:textColor="#FFFFFF"
                android:layout_above="@+id/respuesta4"
                android:layout_alignParentRight="true"
                android:layout_margin="8dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView4"
                android:layout_margin="8dp"
                android:src="@drawable/graduated"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:layout_above="@+id/comodin_50"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>
        </FrameLayout>
    <!-- The navigation drawer -->
    <ListView android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:background="#FFFFFF"/>
</android.support.v4.widget.DrawerLayout>